applications/umami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    goldilocks.fairwinds.com/enabled: "true"
