applications/umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-ingress
  namespace: umami
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - umami0213.kro.kr
    - www.umami0213.kro.kr
    secretName: umami-tls
  rules:
    - host: umami0213.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami
                port:
                  number: 3000
    - host: www.umami0213.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami
                port:
                  number: 3000
